<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.MoviesDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_movie_image"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TableLayout
            android:id="@+id/tl_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                android:text="@string/str_overview"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_overview_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"
                    android:textColor="#515A5A"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_overview_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_genres"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_genres_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"
                    android:textColor="#515A5A"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_genres_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_language"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_language_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"
                    android:textColor="#515A5A"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_language_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_duration"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_time_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"
                    android:textColor="#515A5A"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_tagline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tagline"
                    android:textColor="#515A5A"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tv_movie_tagline_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"
                    android:textColor="#515A5A"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_tagline_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="#515A5A"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_status_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"

                    android:paddingLeft="5dp"
                    android:textColor="#515A5A"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_status_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_production_companies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_production_ncompanies"
                    android:textColor="#515A5A"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/tv_movie_production_companies_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"

                    android:textColor="#515A5A"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/str_colon"/>
                <TextView
                    android:id="@+id/tv_movie_production_companies_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <TextView
                    android:id="@+id/tv_movie_budget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_budget"
                    android:textColor="#515A5A"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_budget_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_colon"
                    android:textColor="#515A5A"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/tv_movie_budget_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#515A5A"
                    android:text="@string/str_na"
                    android:textSize="16sp"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_book"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>